@@ -1,6 +1,6 @@
 Name: harbour-fuoten
 Summary: ownCloud/Nextcloud News App Client
-Version: 0.6.5
+Version: 0.6.6
 Release: 1
 # The contents of the Group field should be one of the groups listed here:
 # http://gitorious.org/meego-developer-tools/spectacle/blobs/master/data/GROUPS
