@@ -1,3 +1,9 @@
+Fuoten 0.6.6 - 2019-05-06
+- General
+  * note: maintenance update for sixth preview release
+  * fixed: article list is not updated (#52)
+  * improved: translation updates
+
 Fuoten 0.6.5 - 2019-04-30
 - SailfishOS
   * note: maintenance update for sixth preview release
